src/tests/snapshots/fmtm__tests__format__list_item_start_on_same_line-3.snap
---
source: src/tests/format.rs
expression: formatted_inf
---
- An unordered list item should not go beyond the line width by its start marker.

1. An ordered list item should not have the first line broken by its start marker.

- [ ] Nor should an empty task list item have the first line broken by its start marker.
- [x] Nor should a checked task list item have the first line broken by its start marker.
