src/tests/snapshots/fmtm__tests__format__yaml_header_then_comment-2.snap
---
source: src/tests/format.rs
expression: formatted_20
---
---
title: dummy
---


<!-- comment -->
