src/tests/snapshots/fmtm__tests__format__yaml_header_then_comment-3.snap
---
source: src/tests/format.rs
expression: formatted_inf
---
---
title: dummy
---


<!-- comment -->
