src/tests/snapshots/fmtm__tests__format__yaml_header_then_comment.snap
---
source: src/tests/format.rs
expression: default_formatted
---
---
title: dummy
---

<!-- comment -->
